<resources>
    <string name="app_name">Trakerr</string>


    <string name="title_section1_Home">Home</string>
    <string name="title_section2_AddOrEditGroup">Add/Edit Group</string>
    <string name="title_section3_Settings">Settings</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="signin">Signin</string>
    <string name="add_user">Add User</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="new_group_name">New Group Name</string>
    <string name="create_new_group">Create New Group</string>
    <string name="select_from_groups">Select from following Groups</string>
</resources>
